# Bangalore_Electricity_Intelligence

./: DETAILED_REPORT.md  Makefile  Project_Report.md  README.md  demo_app.py  pyproject.toml
data/transformed/: full_data.parquet  full_data_with_FE.parquet
models/: LGB_model.pkl  model.pkl  pipeline_model.pkl
src/: frontend.py  monitoring_frontend.py
src/component/: data_info.py  feature_group_config.py  inference.py  model_info.py
